Extensions Platform: beta launch #119521
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#119521
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
Although the extensions platform alpha release is finished there are still a few tasks we want to tackle before 4.2 Beta.
Show-stoppers
Blender:
Server-side:
Documentation:
Bugs:
Bugs to investigate
__package__
it returns the package where the operator lives. Document how this can be solved.Good to have
Blender:
blocklist
, proposal #124954Archived (done) tasks)
11b1919bcf
build
&validate
sub-commands should validate tags as well #123986blender_version_max
should be non-inclusive: infrastructure/extensions-website#183dc9430c480
.939e4b2efc
.a24add4a66
bpy.utils.register_submodule_factory
#1227696450141a18
.171319d9ef
.--offline-mode
).See PR !121994. (
57c023d580
)https://extensions.blender.org/api/v1/extensions/
to avoid unnecessary redirect. (f7f23541f0
)e0b47f78e8
.zip
files. (blender/blender-addons-contrib@a1b0f1b1f4)f64f3e8524
)bl_info
warning (0b13d1f31a
).0d2c4df346
).Unify install from disk (installing legacy add-on should go via install from disk as well)..whl
) in packages #119681Small things I noticed, let me know if I should make separate reports for any or all:
On the Submit page, the "guidelines" link is 404.Seems fixed.Add-on preferences are a separate, disconnected box.At first I wanted to add my add-on as a local repository, so I wouldn't have to zip it up and re-install it every time I work on it. But when I did this, the add-on's checkbox to enable it was grayed out.When trying to use the Add Local Repository operator and then browsing a directory, the operation gets cancelled. It only works by typing/pasting in the directory path. I think this is happening because the file selector is in a pop-up panel, which is not a permanent UI element, so it disappears after choosing a directory, cancelling the operator.Update: I tried 4.2 again after some time, and all of my issues seem to have been addressed. I'm really happy with how this project is going, great job guys.
This was the case for add-ons too, and it's weird.
Is it possible to use proper panels for add-ons instead of weird boxes? Regular panels with headers and content like properties and modifiers. Than add-on preferences can be a subpanel which is opened by default
Hey there, i've noticed that automatic installation of bundled wheel files (added in#119681) seemingly doesn't work for extensions from local repositories. Is that expected behaviour?
Please report as a bug so we can investigate this further. It is supposed to work, but we will need more details from you. Feel free to reference me and campbell on it (@dfelinto + @ideasman42).
71,098 addon developers rely on Jacque Lucke's Blender extension for VSCode. Could Blender take over it's maintenance, as it no longer works with the new extension system, and Jacque no longer maintains it.
Maybe a checkbox in preferences to switch to extension mode, so addon developers can optionally continue maintaining legacy addons for users who are on older blender versions.
@dfelinto there was a proposal for locking in this task:
I've committed support to "Force Unlock" a repository and removed the text above, but it works differently to the steps you've listed.
This is mainly as a way to prevent users having to manually navigate into the directory and delete it themselves.
Supporting this seems risky:
Since users often click "OK" to these kinds of messages and in this case clicking through could lead to repository corruption. Further, this should be an exceptional case, if this is happening often I think we would be better off investigating why that is - and ways to reduce the risk of Blender leaving the repository locked.
Besides that, implementing the steps proposed isn't trivial as users would probably expect the dialog to continue with whatever action requires the lock after force-unlocking. This is something Blender's UI doesn't support without some fairly awkward operator logic. This has been done for the drag & drop UI, implementing this for locking would require something similar for all actions that manipulate the repository (including drag & drop). In short, I don't think it's practical to implement this without UI development that focuses on better supporting this use-case.
It's probably best any larger changes to user interactions on a locked repository are handled as design tasks.
Closing this for now since Extensions is now officially released :)